<resources>
    <string name="app_name">酷学</string>
    <string name="home">首页</string>
    <string name="community">社区</string>
    <string name="me">我的</string>
    <string name="save">保存</string>
    <string name="page_pb">%1$d/10</string>
    <string name="empty_view_hint">暂无数据</string>
    <string name="error_view_hint">加载失败</string>
    <string name="loading">加载中,请稍候...</string>
    <string name="no_network_view_hint">网络异常</string>
    <string name="search">搜索</string>
    <string name="history_record">历史记录</string>
    <string name="query_recommend">查看全部推荐词</string>
    <string name="query_want_to_query">找你想找的</string>
    <string name="done">完成</string>
    <string name="more">更多</string>

    <string-array name="community_items">
        <item>推荐</item>
        <item>视频</item>
        <item>美图</item>

    </string-array>
    <string-array name="me_items">
        <item>使用说明</item>
        <item>清除缓存</item>
        <item>关于我们</item>
    </string-array>

</resources>