<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/activity_common_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dimen_10"
        android:paddingLeft="@dimen/dimen_15"
        android:paddingRight="@dimen/dimen_15"
        android:paddingTop="@dimen/dimen_10">

        <ImageView
            android:id="@+id/iv_search_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/back" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_marginRight="@dimen/dimen_10"
            android:layout_weight="1"
            android:background="@drawable/search_bg"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_5">

            <ImageView

                android:layout_width="13dp"
                android:layout_height="13dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/big_search" />

            <EditText
                android:id="@+id/et_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/query_want_to_query"
                android:inputType="text"
                android:textColor="@color/gray_bfbfbf"
                android:textColorHint="@color/gray_bfbfbf"
                android:textSize="@dimen/text_14" />

            <ImageView
                android:id="@+id/iv_delete_search"
                android:layout_width="@dimen/dimen_15"
                android:layout_height="@dimen/dimen_15"
                android:layout_gravity="center_vertical"
                android:src="@drawable/delete"
                android:visibility="gone" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/search"
            android:textColor="@color/gray_e6e6e6"
            android:textSize="@dimen/text_16" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_05"
        android:background="@color/gray_bfbfbf" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_no_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_10"
                    android:paddingLeft="@dimen/dimen_15"
                    android:paddingRight="@dimen/dimen_15">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/history_record"
                        android:textColor="@color/gray_bfbfbf"
                        android:textSize="@dimen/text_14" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true">

                        <ImageView
                            android:id="@+id/iv_delete_history"
                            android:layout_width="@dimen/dimen_15"
                            android:layout_height="@dimen/dimen_15"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/delete_recycle" />
                        <TextView
                            android:id="@+id/tv_delete_done"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:textSize="@dimen/text_14"
                            android:textColor="@color/gray_bfbfbf"
                            android:text="@string/done"
                            android:visibility="gone"/>
                    </RelativeLayout>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_05"
                    android:background="@color/gray_bfbfbf" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycleView_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_5"
                android:background="@color/gray_bfbfbf" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/ll_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_10"
                        android:paddingLeft="@dimen/dimen_15"
                        android:paddingRight="@dimen/dimen_15">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/query_want_to_query"
                            android:textColor="@color/gray_bfbfbf"
                            android:textSize="@dimen/text_14" />

                        <ImageView
                            android:id="@+id/iv_search_to_search"
                            android:layout_width="@dimen/dimen_15"
                            android:layout_height="@dimen/dimen_15"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/hide" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_05"
                        android:background="@color/gray_bfbfbf" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycleView_search"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_show_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:drawableLeft="@drawable/query_open"
                    android:drawablePadding="@dimen/dimen_5"
                    android:text="@string/query_recommend"
                    android:textColor="@color/gray_bfbfbf"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleView_search_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <include
            android:id="@+id/rl_empty"
            layout="@layout/empty_view"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>
